--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
   "homepage": "https://github.com/jmartin4563/conventional-commit-poc#readme",
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4"
+    "@commitlint/config-conventional": "^17.4.4",
+    "eslint": "^8.34.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.3"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
