--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -18,3 +18,5 @@ jobs:
           release-type: node
           package-name: conventional-commit-poc
           changelog-path: NEWS.md
+          changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"security","section":"Miscellaneous","hidden":false}]'
+          changelog-notes-type: "github"
