--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,6 +11,8 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
+      - name: Create Release Notes
+        run: node scripts/add-custom-changelog.js
       - uses: google-github-actions/release-please-action@v3
         id: release
         with:
@@ -19,3 +21,4 @@ jobs:
           package-name: conventional-commit-poc
           changelog-path: NEWS.md
           changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"security","section":"Security Fixes","hidden":false}]'
+          changelog-notes-type: "newrelic"
