--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,11 +11,14 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
+      - name: Install Dependencies
+        run: npm ci
       - name: Create Release Notes
         run: node scripts/add-custom-changelog.js
       - uses: google-github-actions/release-please-action@v3
