--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,10 +17,8 @@ jobs:
         with:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
-      - name: Install release-please
+      - name: Install Dependencies
         run: npm ci
-      - name: Add Newrelic Release Notes Type
-        run: node scripts/add-custom-changelog.js
       - name: Update release-please PR
         run: npm run release -- release-pr --token=${{ secrets.GITHUB_TOKEN }} --repo-url=newrelic/node-newrelic --release-type=node --package-name=conventional-commit-poc --changelog-path=NEWS.md --changelog-type=newrelic 
       # - uses: google-github-actions/release-please-action@v3
