--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -12,21 +12,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 18
+      - name: Use Node.js LTS
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          registry-url: 'https://registry.npmjs.org'
       - name: Install Dependencies
         run: npm ci
-      - name: Update release-please PR
-        run: npm run release -- release-pr --token=${{ secrets.GITHUB_TOKEN }} --repo-url=newrelic/node-newrelic --release-type=node --package-name=conventional-commit-poc --changelog-path=NEWS.md --changelog-type=newrelic 
-      # - uses: google-github-actions/release-please-action@v3
-      #   id: release
-      #   with:
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     release-type: node
-      #     package-name: conventional-commit-poc
-      #     changelog-path: NEWS.md
-      #     changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"security","section":"Security Fixes","hidden":false}]'
-      #     changelog-notes-type: "newrelic"
+      - uses: google-github-actions/release-please-action@v3
+        id: release
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          release-type: node
+          package-name: conventional-commit-poc
+          changelog-path: NEWS.md
+          changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"security","section":"Miscellaneous","hidden":false}]'
+      - name: Update GH Release with Support Statement
+        run: node scripts/releases.js --uploadUrl=${{ steps.release.outputs.upload_url }}
+        if: ${{ steps.release.outputs.release_created }}
