--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "private": "true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "npx release-please",
-    "prerelease": "node scripts/add-custom-changelog.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -23,13 +21,13 @@
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "body-parser": "^1.20.2",
+    "commander": "^10.0.0",
     "eslint": "^8.34.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "husky": "^8.0.3",
-    "release-please": "^15.8.0"
+    "husky": "^8.0.3"
   },
   "dependencies": {
     "chai": "^4.3.7",
