--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@octokit/rest": "^19.0.7",
     "body-parser": "^1.20.2",
     "commander": "^10.0.0",
     "eslint": "^8.34.0",
