--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@octokit/rest": "^19.0.7",
-    "body-parser": "^1.20.2",
+    "chai": "^4.3.7",
     "commander": "^10.0.0",
     "eslint": "^8.34.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "mocha": "^10.2.0",
+    "sinon": "^15.0.1"
   },
   "dependencies": {
-    "chai": "^4.3.7",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mocha": "^10.2.0",
-    "mongodb": "^5.0.1",
-    "sinon": "^15.0.1"
+    "mongodb": "^5.0.1"
   }
 }
