ci: add post-step to add support disclaimer

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -25,7 +25,7 @@ jobs:
           release-type: node
           package-name: conventional-commit-poc
           changelog-path: NEWS.md
-          changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"security","section":"Miscellaneous","hidden":false}]'
+          changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug fixes","hidden":false},{"type":"security","section":"Security fixes","hidden":false}]'
       - name: Update GH Release with Support Statement
-        run: node scripts/releases.js --uploadUrl=${{ steps.release.outputs.upload_url }}
+        run: node scripts/releases.js
         if: ${{ steps.release.outputs.release_created }}
