chore: add engines stanza to package.json
This is used by eslint-plugin-n to determine what rules it can and
cannot support based on node version.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "bugs": {
     "url": "https://github.com/jmartin4563/conventional-commit-poc/issues"
   },
+  "engines": {
+    "node": ">=14"
+  },
   "homepage": "https://github.com/jmartin4563/conventional-commit-poc#readme",
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
