--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
+    "markdown-ast": "^0.3.0",
     "mocha": "^10.2.0",
     "sinon": "^15.0.1"
   },
