--- a/package.json
+++ b/package.json
@@ -24,21 +24,15 @@
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@octokit/rest": "^19.0.7",
-    "chai": "^4.3.7",
-    "commander": "^10.0.0",
     "eslint": "^8.35.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "husky": "^8.0.3",
-    "markdown-ast": "^0.3.0",
-    "mocha": "^10.2.0",
-    "sinon": "^15.0.1"
+    "husky": "^8.0.3"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "mongodb": "^5.1.0"
+    "express": "^4.18.2"
   }
 }
