--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -26,6 +26,7 @@ jobs:
           package-name: conventional-commit-poc
           changelog-path: NEWS.md
           changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug fixes","hidden":false},{"type":"security","section":"Security fixes","hidden":false}]'
+          changelog-notes-type: github
       - name: Update GH Release with Support Statement
         run: node scripts/release-disclaimer.js
         if: ${{ steps.release.outputs.release_created }}
